compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/backingField/explicitBackingFieldInInterface.kt
interface I {
    val it: Number
        <!EXPLICIT_BACKING_FIELD_IN_INTERFACE!>field<!> = 10
}
